--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                <h3>
     1. Scope
 </h3>
-<p>1.1. Privacy Policy. This Privacy Policy (this “Privacy Policy”) applies to information we collect or use on websites and mobile applications, including, www.pallab.io, products, features, services, or any portion thereof (collectively, the “Service”), controlled by Junto Inc. (in the following as “Junto” or “we” or “our” or “us”).
+<p>1.1. Privacy Policy. This Privacy Policy (this “Privacy Policy”) applies to information we collect or use on websites and mobile applications, including, www.pallab.io, products, features, services, or any portion thereof (collectively, the “Service”), controlled by Johannes Klumpe. (in the following as “Junto” or “we” or “our” or “us”).
 </p>
 <p>
 </p>
